--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1;python_version<"3.9"
 Baker==1.3
+celery==5.4.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
