feat: add redis

--- a/docker-compose-postgresql.yml
+++ b/docker-compose-postgresql.yml
@@ -41,6 +41,7 @@ services:
       - DB_HOST=postgresql
     depends_on:
       - rabbitmq
+      - redis
 
   celery:
     build:
@@ -56,6 +57,7 @@ services:
     depends_on:
       - django
       - rabbitmq
+      - redis
 
   rabbitmq:
     image: rabbitmq
@@ -65,3 +67,8 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
