--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -14,6 +14,7 @@ Django==4.1.5
 django-filter==22.1
 django-seed==0.3.1
 django-templated-mail==1.1.1
+django-redis==5.4.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
